--- a/src/components/Dashboard/Grid/styles.css
+++ b/src/components/Dashboard/Grid/styles.css
@@ -11,7 +11,7 @@
 }
 
 .grid:hover {
-  border: 2px solid var(--green);
+  border: 2px solid var(--blue);
   transition: all 0.3s;
 }
 
@@ -38,9 +38,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid var(--green);
+  border: 2px solid var(--blue);
   border-radius: 50%;
-  color: var(--green);
+  color: var(--blue);
   padding: 0.5rem;
   height: 1.5rem;
   width: 1.5rem !important;
@@ -85,28 +85,28 @@
 }
 
 .price-chip {
-  border: 2px solid var(--green);
+  border: 2px solid var(--blue);
   border-radius: 2rem;
   padding: 0.25rem 1rem;
   font-weight: 600;
-  color: var(--green);
+  color: var(--blue);
 }
 
 .price-chip:hover,
 .chip-icon:hover {
-  background-color: var(--green);
+  background-color: var(--blue);
   color: var(--white);
   transition: all 0.3s;
 }
 
 .chip-icon {
-  border: 2px solid var(--green);
+  border: 2px solid var(--blue);
   padding: 0.2rem;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  color: var(--green);
+  color: var(--blue);
 }
 
 .red {
@@ -122,7 +122,7 @@
 
 .current-price,
 .current-price-red {
-  color: var(--green);
+  color: var(--blue);
   font-weight: 600;
   font-size: 1.1rem;
   margin: 0;
